users/users-ms/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-ms
  labels:
    app: users-ms
spec:
  type: NodePort
  ports:
    - protocol: TCP
      nodePort: 30003
      port: 8000
      targetPort: 8000
  selector:
    app: users-ms
